--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -3,6 +3,9 @@
 @import "variable";
 
 header {
+	nav.navbar {
+		min-height: 40px;
+	}
 	nav.navbar-default {
 		background-color: $main-color;
 		ul.nav-header{
