--- a/app/views/courses/2/_teach_content.html.erb
+++ b/app/views/courses/2/_teach_content.html.erb
@@ -1,83 +1,292 @@
-<dl>
-  <dd class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 教学内容的具体变现形式</dd>
-  <div class="container-fluid">
-    <dd>1.引入企业真实项目，编写校本教材</dd>
-    <dd>2.与企业工程师编写校本实验、实训讲义</dd>
-    <dd>3.其他教学资料齐全</dd>
-    <dd>4.录制教学演示录像</dd>
-    <dd>5.建立满足课堂教学需要的网络教学资源</dd>
-  </div>
-  <dd class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 教学内容的组织与安排</dd>
-  <div class="container-fluid">
-    <dd>1. 教学内容的组织</dd>
-    <p>教学内容的组织以项目实践教学为主，通过项目实践的手段，真实再现企业iOS界面开发理念。教学内容组织过程中让学员自己通过对案例的理解与分析，以及在团队开发中的共同讨论，促使学员进入特定的iOS界面开发情景与过程，建立真实的开发环境和培养规范化的开发规范。</p>
-    <dd>实施过程：</dd>
-    <dd>
-      <p>（1）项目选择和学生分组。以项目来划分项目组。建立对不同岗位需求与角色的认知，并以平时成绩平均安排每个小组的技术实力。</p>
-      <p>（2）实践项目模拟企业真实的小型项目，这些项目真实且有社会效益，规模和难度适中，容易理解，可以激发学生的开发兴趣。</p>
-      <p>（3）必要的理论合理的融入项目阶段需求进行讲授，同时分解项目的各项子任务进行练习，边学边练、学以致用，减少纯理论知识的讲解。</p>
-    </dd>
-    <dd>2. 课程安排</dd>
+<!-- 教学内容的针对性和适用性 -->
+<div class="container-fluid course-content-div">
+  <dl>
+    <dt>1.1 教学内容的选取</dt>
+    <dd>该课程引入项目教学法、任务驱动教学法、场景模拟教学法。该课程以企业真实的项目为导向，把企业项目序化成适合教学的教学项目，根据子项目的性质，将课程内容精心设计为若干个任务，其中包括总任务、模块任务、子任务等不同大小的任务。</dd>
+    <dd>为了使该课程内容的选择与市场需求更好的衔接，我系在学院领导的大力支持下与大唐电信集团下属公司上海大唐移动通设备有限公司、大唐邦彦（上海）信息技术有限公司建立了深度校企合作关系，由于市面上与该课程相关的书籍极为匮乏，也没有与高职类学生学习相匹配的学习教材，我系与企业合作开发适合我院学生学习的校本教材，校本教材中大量融合优秀的、适合教学的企业项目。课程内容的选取依据岗位需求。该课程引入综合性的企业真实项目，这些综合项目可以分解成若干个子项目分布于课程中的各个知识点。</dd>
+    <dd>该课程的每一个子项目内容的选择分成两在部分：第一部分是基础知识。一般企业的项目复杂无序，不适合教学，要先对企业真实案例进行分析，抽取出相关的理论点，理论点不进行展开，以“必需、够用”为度，突出应用，通过基础知识的学习让学生能实现一些简单实用的项目，来激发学生学习的兴趣；第二部分是结合实际网络系统的软硬件平台安装，平台软件操作，参数调测和数据库修改。此部分内容多且杂乱，应多举实例，通过实例来讲解知识点，这样既激发了学生的兴趣又突出了实例环节，还可以通过实例把前面所学的基础知识运用进来，不至于各个环节脱节，注重培养学生解决实际问题的能力。</dd>
+    <dt>1.2 针对性和适用性</dt>
+    <dd>任务驱动教学方法中学生是学习过程的主体, 教师是该过程的设计者和组织者，能够充分发挥学生的主体作用，培养学生的综合能力。</dd>
+    <dd>教学过程中，学生在不同的学习阶段完成不同的任务，每个任务均含有适量的新知识点和认知冲突, 任务有一定的弹性和开放性。学生在完成任务的过程中, 积极主动地探索各种解决任务的途径, 并且选择最佳方案。</dd>
+    <dd>在教学内容选取过程中，以职业素养和职业能力培养为核心，由校企共同开发按照行为导向的教学理念选取组织教学内容，充分体现职业性、实践性、开放性的要求；同时内容兼顾了知识、能力的可移植性，为学生可持续发展奠定良好基础。</dd>
   </dl>
-  <div class="entry-content-table">
+</div>
+
+<!-- 教学内容的组织与安排 -->
+
+<div class="container-fluid course-content-div">
+  <dl>
+    <dt>2.1教学内容的组织</dt>
+    <dd>教学内容的组织以项目实践教学为主，通过项目实践的手段，真实再现移动通信各各的具体工作内容。教学内容组织过程中让学员自己通过对案例的理解与分析，以及在项目组中的共同讨论，促使学员进入具有强烈现场感的情景与过程，养成正确的工作习惯，良好的行为规范和优秀的职业作风。</dd>
+    <dd>实施过程：</dd>
+    <dd>（1）项目选择和学生分组。以项目来划分项目组。建立对不同岗位需求与角色的认知，并以平时成绩平均安排每个小组的技术实力。</dd>
+    <dd>（2）实践项目模拟企业真实的小型项目，这些项目真实且有社会效益，规模和难度适中，容易理解，可以激发学生的开发兴趣。</dd>
+    <dd>（3）必要的理论合理的融入项目阶段需求进行讲授，同时分解项目的各项子任务进行练习，边学边练、学以致用，减少纯理论知识的讲解。</dd>
+    <dt>2.2教学内容的安排</dt>
+    <dd>本课程计划授课48课时，安排在第四学期。</dd>
+    <dd class="text-center">授 课 计 划 表</dd>
+    <dd>课程： 无线网络设备维护  课时：128</dd>
     <table class="table table-bordered">
       <thead>
-        <tr class="active">
-          <th>总课时</th>
-          <th>开课时间</th>
-          <th>有效期至</th>
-        </tr>
+        <th colspan="4">项目一   3G原理</th>
       </thead>
       <tbody>
-        <tr>
-          <td >353</td>
-          <td>2015.04.20</td>
-          <td>2016.07.20</td>
-        </tr>
+        <td>任务一</td>
+        <td>3G系统概述</td>
+        <td>3课时</td>
+        <td>16</td>
+      </tbody>
+      <tbody>
+        <td>任务二</td>
+        <td>3G网络架构</td>
+        <td>4课时</td>
+        <td>16</td>
+      </tbody>
+      <tbody>
+        <td>任务三</td>
+        <td>3G物理层</td>
+        <td>6课时</td>
+        <td>16</td>
+      </tbody>
+      <tbody>
+        <td>任务四</td>
+        <td>3G关键技术</td>
+        <td>3课时</td>
+        <td>16</td>
       </tbody>
     </table>
     <table class="table table-bordered">
       <thead>
-        <tr class="danger">
-          <th>授课内容</th>
-          <th>课时</th>
-          <th>单课时长</th>
-          <th>学习频率</th>
-          <th>上课方式</th>
-        </tr>
+        <th colspan="4">项目二   3G设备原理</th>
       </thead>
       <tbody>
-        <tr class="active">
-          <td>课程</td>
-          <td>36</td>
-          <td>20分钟</td>
-          <td>每周四节</td>
-          <td>随时学，反复学<br>也可下载到手机，ipad离线学</td>
-        </tr>
-        <tr>
-          <td>训练课</td>
-          <td>36</td>
-          <td>20分钟</td>
-          <td>每周1节</td>
-          <td rowspan="4">预约上课，pc，手机，ipad都支持</td>
-        </tr>
-        <% (0..2).each do |index|%>
-        <tr>
-          <td>训练课</td>
-          <td>36</td>
-          <td>20分钟</td>
-          <td>每周1节</td>
-        </tr>
-        <% end %>
-        <tr class="active">
-          <td>阶段评估体系</td>
-          <td>36</td>
-          <td>25分钟</td>
-          <td>每周一次</td>
-          <td>测试评估系统</td>
-        </tr>
+        <td>任务一</td>
+        <td>基站系统结构</td>
+        <td>2课时</td>
+        <td>8</td>
+      </tbody>
+      <tbody>
+        <td>任务二</td>
+        <td>基站运行原理</td>
+        <td>2课时</td>
+        <td>8</td>
+      </tbody>
+      <tbody>
+        <td>任务三</td>
+        <td>RRU类型及应用场景</td>
+        <td>2课时</td>
+        <td>8</td>
+      </tbody>
+      <tbody>
+        <td>任务四</td>
+        <td>实训室综合勘察</td>
+        <td>2课时</td>
+        <td>8</td>
       </tbody>
     </table>
-  </div>
+    <table class="table table-bordered">
+      <thead>
+        <th colspan="4">项目三   3G基站本调</th>
+      </thead>
+      <tbody>
+        <td>任务一</td>
+        <td>开通前准备</td>
+        <td>1课时</td>
+        <td>32</td>
+      </tbody>
+      <tbody>
+        <td>任务二</td>
+        <td>系统接入及SI参数配置</td>
+        <td>1课时</td>
+        <td>32</td>
+      </tbody>
+      <tbody>
+        <td>任务三</td>
+        <td>传输参数配置</td>
+        <td>4课时</td>
+        <td>32</td>
+      </tbody>
+      <tbody>
+        <td>任务四</td>
+        <td>基站状态查询</td>
+        <td>1课时</td>
+        <td>32</td>
+      </tbody>
+      <tbody>
+        <td>任务五</td>
+        <td>基站升级</td>
+        <td>2课时</td>
+        <td>32</td>
+      </tbody>
+      <tbody>
+        <td>任务六</td>
+        <td>模拟小区建立</td>
+        <td>3课时</td>
+        <td>32</td>
+      </tbody>
+      <tbody>
+        <td>任务七</td>
+        <td>基站故障排除及案例演练</td>
+        <td>4课时</td>
+        <td>32</td>
+      </tbody>
+      <tbody>
+        <td>任务八</td>
+        <td>基站本调综合训练</td>
+        <td>16课时</td>
+        <td>32</td>
+      </tbody>
+    </table>
+    <table class="table table-bordered">
+      <thead>
+        <th colspan="4">项目四   RNC本调</th>
+      </thead>
+      <tbody>
+        <td>任务一</td>
+        <td>RNC系统架构及运行原理</td>
+        <td>2课时</td>
+        <td>16</td>
+      </tbody>
+      <tbody>
+        <td>任务二</td>
+        <td>RNC系统接入及软件安装</td>
+        <td>4课时</td>
+        <td>16</td>
+      </tbody>
+      <tbody>
+        <td>任务三</td>
+        <td>RNC参数配置及底层接入</td>
+        <td>2课时</td>
+        <td>16</td>
+      </tbody>
+      <tbody>
+        <td>任务四</td>
+        <td>RNC本调综合训练</td>
+        <td>8课时</td>
+        <td>16</td>
+      </tbody>
+    </table>
+    <table class="table table-bordered">
+      <thead>
+        <th colspan="4">项目五    设备联调</th>
+      </thead>
+      <tbody>
+        <td>任务一</td>
+        <td>OMC系统结构及运行原理</td>
+        <td>1课时</td>
+        <td>28</td>
+      </tbody>
+      <tbody>
+        <td>任务二</td>
+        <td>OMC平台本调</td>
+        <td>5课时</td>
+        <td>28</td>
+      </tbody>
+      <tbody>
+        <td>任务三</td>
+        <td>Iub、Itf-B接口联调</td>
+        <td>6课时</td>
+        <td>28</td>
+      </tbody>
+      <tbody>
+        <td>任务四</td>
+        <td>设备联调综合训练</td>
+        <td>16课时</td>
+        <td>28</td>
+      </tbody>
+    </table>
+    <table class="table table-bordered">
+      <thead>
+        <th colspan="4">项目六   4G原理及设备原理</th>
+      </thead>
+      <tbody>
+        <td>任务一</td>
+        <td>4G网络架构</td>
+        <td>1课时</td>
+        <td>6</td>
+      </tbody>
+      <tbody>
+        <td>任务二</td>
+        <td>4G物理层</td>
+        <td>4课时</td>
+        <td>6</td>
+      </tbody>
+      <tbody>
+        <td>任务三</td>
+        <td>4G基站介绍</td>
+        <td>1课时</td>
+        <td>6</td>
+      </tbody>
+    </table>
+    <table class="table table-bordered">
+      <thead>
+        <th colspan="4">项目七    4G基站本调</th>
+      </thead>
+      <tbody>
+        <td>任务一</td>
+        <td>基站开通</td>
+        <td>2课时</td>
+        <td>18</td>
+      </tbody>
+      <tbody>
+        <td>任务二</td>
+        <td>传输参数配置</td>
+        <td>3课时</td>
+        <td>18</td>
+      </tbody>
+      <tbody>
+        <td>任务三</td>
+        <td>小区建立</td>
+        <td>3课时</td>
+        <td>18</td>
+      </tbody>
+      <tbody>
+        <td>任务四</td>
+        <td>基站故障排除及案例演练</td>
+        <td>2课时</td>
+        <td>18</td>
+      </tbody>
+      <tbody>
+        <td>任务五</td>
+        <td>4G基站本调综合训练</td>
+        <td>8课时</td>
+        <td>18</td>
+      </tbody>
+    </table>
+    <table class="table table-bordered">
+      <thead>
+        <th colspan="4">项目八    网络参数配置</th>
+      </thead>
+      <tbody>
+        <td>任务一</td>
+        <td>小区参数配置</td>
+        <td>2课时</td>
+        <td>4</td>
+      </tbody>
+      <tbody>
+        <td>任务二</td>
+        <td>网络参数离线配置综合训练</td>
+        <td>2课时</td>
+        <td>4</td>
+      </tbody>
+    </table>
+  </dl>
+</div>
+
+<!-- 教学内容的具体表现形式 -->
+
+<div class="container-fluid">
+  <dl>
+    <dt>3.1 引入企业真实项目，编写校本教材</dt>
+    <dd>为了使该课程内容的选择与市场需求更好的衔接，我系在学院领导的大力支持下与大唐电信集团下属公司上海大唐移动通设备有限公司、大唐邦彦（上海）信息技术有限公司建立了深度校企合作关系。由于市面上与该课程相关的书籍极为匮乏，也没有与高职类学生学习相匹配的学习教材，我系与企业合作开发适合我院学生学习的校本教材，校本教材中大量融合优秀的、适合教学的企业项目。</dd>
+    <dt>3.2 与企业工程师编写校本实验、实训讲义</dt>
+    <dd>我们根据学生实验、实训的具体情况，以职业岗位的具体要求为切入点、以项目为主线，以工作过程为导向，与统编教材相结合使用，既有创新，又有经典，满足了高职教育的理念要求。</dd>
+    <dt>3.3 其它教学资料齐全</dt>
+    <dd>校企合作共同编写了实验、实训指导书、习题库和试题库、拓展训练、电子课件、电子教案教学资源等，并配合实训平台，方便学生课后进一步练习和操作，能够满足学生全方位对教学资源和学习资源的需求。</dd>
+    <dt>3.4 录制教学演示录像 </dt>
+    <dd>录制教学演示录像，供学生在线学习和观看，为学生自主学习提供平台。</dd>
+    <dt>3.5 建立满足课程教学需要的网络教学资源</dt>
+    <dd>建设了符合课程设计要求并利于学生职业能力培养的教学资源，包括：多媒体课件、电子教案、实训报告手册、实验演示录像等，为学生的自主学习提供了丰富有效的资料。</dd>
+  </dl>
 </div>
 <%= link_to "展开", "javascript:void(0)", class: "drop-down-arrow"%>
