--- a/app/views/courses/2/_main.html.erb
+++ b/app/views/courses/2/_main.html.erb
@@ -3,7 +3,7 @@
   <a href="javascript:void(0)" class="material public-common-style">申报材料</a>
   <a href="javascript:void(0)" class="setup public-common-style">课程设置</a>
   <a href="javascript:void(0)" class="team public-common-style">教学队伍</a>
-  <a href="javascript:void(0)" class="condition public-common-style">实践条件</a>
+  <a href="javascript:void(0)" class="condition public-common-style">教学条件</a>
   <a href="javascript:void(0)" class="method public-common-style">教学方法</a>
   <a href="javascript:void(0)" class="content public-common-style">教学内容</a>
   <a href="javascript:void(0)" class="resource public-common-style">教学资源</a>
@@ -48,7 +48,7 @@
     &nbsp;&nbsp;
     <a href="javascript:void(0)" class="btn btn-default">教学方法</a>
     &nbsp;&nbsp;
-    <a href="javascript:void(0)" class="btn btn-default">实践条件</a>
+    <a href="javascript:void(0)" class="btn btn-default">教学条件</a>
     &nbsp;&nbsp;
     <a href="javascript:void(0)" class="btn btn-default">教学效果</a>
     &nbsp;&nbsp;
