--- a/app/views/courses/2/_course_condition.html.erb
+++ b/app/views/courses/2/_course_condition.html.erb
@@ -2,5 +2,112 @@
 <br><br>
 <div class="container-fluid">
 	<dl>
-	</dl>
+      <dt>1．校内实训设备与实训环境</dt>
+      <dd>自2011年与大唐电信集团合作以来，我们建立了面向市场的校内实训基地-大唐移动通信人才培养基地，基地校内实训基地面积达3000余平方米，借助上海市教委专项扶持资金和学校自筹及企业捐赠等方式配置了移动通信行业国际领先标准的3G TD-SCDMA和4G TD-LTE系统设备；基地可以对接大唐无线移动创新中心所辖“无线移动通信国家重点实验室”和“新一代移动通信无线网络与芯片技术国家工程实验室”两个国家级重点实验室，使用企业共享的自主研发的国际标准核心专利。两者为实现创建国际一流移动互联网产教研中心的基地建设目标奠定了坚实基础。</dd>
+      <dd class="text-center"><%= image_tag("course_2/pratice-1.png")%></dd>
+      <dd class="text-center">大唐移动通信人才培养基地</dd>
+      <dd>校内基地的具体情况如下：</dd>
+      <table class="table table-border table-bordered">
+        <thead>
+          <th class="text-center">序号</th>
+          <th class="text-center">基地名称</th>
+          <th class="text-center">建设时间</th>
+          <th class="text-center">功能</th>
+          <th class="text-center">投入资金</th>
+        </thead>
+        <tbody>
+          <td class="text-center">1</td>
+          <td class="text-center">嵌入式实训室</td>
+          <td class="text-center">2011</td>
+          <td class="text-center">基于LINUX平台的上层应用级相关技术应用开发</td>
+          <td class="text-center">25万</td>
+        </tbody>
+        <tbody>
+          <td class="text-center">2</td>
+          <td class="text-center">移动互联网产教工作室</td>
+          <td class="text-center">2012</td>
+          <td class="text-center">校企教学团队工作平台</td>
+          <td class="text-center">140万</td>
+        </tbody>
+        <tbody>
+          <td class="text-center">3</td>
+          <td class="text-center">移动互联网实训室</td>
+          <td class="text-center">2013</td>
+          <td class="text-center">移动互联网核心课程教学、实训基地</td>
+          <td class="text-center">145万</td>
+        </tbody>
+        <tbody>
+          <td class="text-center">4</td>
+          <td class="text-center">移动互联网体验中心</td>
+          <td class="text-center">2013</td>
+          <td class="text-center">移动互联网体验、APP应用展示</td>
+          <td class="text-center">135万（大唐配套135万）</td>
+        </tbody>
+        <tbody>
+          <td class="text-center">5</td>
+          <td class="text-center">3G移动通信网络实训中心</td>
+          <td class="text-center">2012</td>
+          <td class="text-center">3G移动通信网络核心课程教学、实训基地</td>
+          <td class="text-center">140万（大唐配套140万）</td>
+        </tbody>
+        <tbody>
+          <td class="text-center">6</td>
+          <td class="text-center">4G移动通信网络实训中心</td>
+          <td class="text-center">2014</td>
+          <td class="text-center">4G移动通信网络核心课程教学、实训基地</td>
+          <td class="text-center">200万（大唐配套200万）</td>
+        </tbody>
+        <tbody>
+          <td class="text-center">7</td>
+          <td class="text-center">移动通信工程模拟与项目管理实训中心</td>
+          <td class="text-center">2014</td>
+          <td class="text-center">通信工程督导、项目经理培养基地</td>
+          <td class="text-center">35万（大唐配套35万）</td>
+        </tbody>
+        <tbody>
+          <td class="text-center">8</td>
+          <td class="text-center">引企入校(大唐邦彦（上海）信息技术有限公司)</td>
+          <td class="text-center">2014</td>
+          <td class="text-center">综合应用软件开发</td>
+          <td class="text-center">100万（大唐投入开发校企协同平台）</td>
+        </tbody>
+        <tbody>
+          <td class="text-center">9</td>
+          <td class="text-center">大学生工作室</td>
+          <td class="text-center">2013</td>
+          <td class="text-center">学生创新能力培养基地</td>
+          <td class="text-center">35万</td>
+        </tbody>
+      </table>
+      <dt>移动互联网体验中心</dt>
+      <dd>校企合作展厅设计为一个互动体验式开放空间，让学生领导体会移动通信高精尖端科技引领下，智慧城市建设给人类生活带来了无限可能。它是一个展示通信新技术、新理念、校企合作成果、校企合作理念的平台，一个高质量的技术体验厅、形象展示厅。给参观者优质的享受，无论是视觉还是听觉，都是全方位的美妙体验。</dd>
+      <dd class="text-center"><%= image_tag("course_2/pratice-2.png")%></dd>
+      <dd>技术的先进性：运用多个亮点展项，体现信息技术，云计算，物联网等多项技术，打造展示新技术，新理念的绝好平台。</dd>
+      <dd>文化的标志性：通过展现高科技下，移动通信的先进性，引发人们在种种现实、挑战和危机下对未来的期待；另一方面，展现我校与大唐不懈的创新能力和科技的飞速发展，将高科技融入城市，融入人类生活，引领人类智慧的人生。</dd>
+      <dd>系统与逻辑性：一方面，体现展品固有的科学性；另一方面，符合观众思维的规律，展厅设计整体具有内在逻辑联系。通过建立具备内在逻辑性的视觉形象来传达展览意图和信息。可读可视性：既重展厅设计内容，又重展厅设计形式。具备学术性、独特性、普及性和艺术性的特点。</dd>
+      <dd>趣味性：激发观众的参与积极性、主动性。</dd>
+      <dt>3G、4G移动通信网络实训中心：</dt>
+      <dd>实验平台以及功能：</dd>
+      <dd>由3G核心网系统平台、无线网络控制平台、Node B无线通信平台、传输平台、网络通信平台构成，主要实验基本的3G通信功能，本实验室是实训基地的核心设备，学员能够通过此实验室了解3G无线通信以及移动通信全过程。了解现网运行设备的运行机理，能够完成业务的演示及功能测试。</dd>
+      <dd class="text-center"><%= image_tag("course_2/pratice-3.png")%></dd>
+      <dt>3G、4G系统管理与优化实训室</dt>
+      <dd>实验平台以及功能：</dd>
+      <dd>由3G移动通信核心网控制管理软件、3G移动通信基站控制管理软件、 3G移动通信RNC控制管理软件、3G移动通信RAN网络控制管理软件、3G移动通信优化测试软件、3G移动通信优化分析软件以及测试平台等构成，学员能够通过此实训室完成无线网络的系统管理，能够进行RAN网络的开通、维护、软件故障定位、业务问题分析、业务功能验证、无线网络业务验证测试、网络优化测试、无线问题分析，完成现网问题LOG回放，系统问题解决方案制定。</dd>
+      <dd class="text-center"><%= image_tag("course_2/pratice-4.png")%></dd>
+      <dt>移动通信工程模拟与项目管理实训中心</dt>
+      <dd>实验平台以及功能：</dd>
+      <dd>由通信基站安装模拟平台、通信核心机房硬件安装模拟平台、通信电源施工模拟平台、通信监控施工模拟平台、通信登高作业模拟平台构成，学员通过此实训室能够掌握现网实际施工技能操作、工具使用、标准化作业流程、网元安装实时操作等。</dd>
+      <dd class="text-center"><%= image_tag("course_2/pratice-5.png")%></dd>
+      <dt>无线网络项目管理模拟实训室</dt>
+      <dd>实验平台以及功能：</dd>
+      <dd>以现网项目运作为蓝本进行沙盘模拟，学员通过此实训室能够学习到项目管理实施、项目报表流程运转，培养学员成为懂技术、会流程、知礼仪、能沟通、具备全员市场化意识的合格工程师。</dd>
+      <dt>2．校外实习基地的建设与利用</dt>
+      <dd>通信技术专业的校外实习基地共2家企业，它们是：</dd>
+      <dt>1．上海大唐移动通信设备有限公司-实习实训基地：</dt>
+      <dd>上海大唐移动通信设备有限公司是国家大型高科技央企——大唐电信科技产业集团的核心企业， 是我国拥有自主知识产权的第三代移动通信标准TD—SCDMA的提出者、核心技术的开发者及产业化的推动者。 大唐移动以打造“无限沟通引擎”为企业发展理念，倡导“创新、市场、诚信、责任”的企业价值观， 始终致力于TDD无线通信技术（及后续技术）与应用的开发，专注于TDD无限通信解决方案与物联网、 移动互联网多网协调发展的融合。大唐移动面向国内和国际市场，全力推动TD—SCDMA及其后续演进TD—LTE产业化进程。</dd>
+      <dd>在该实训基地，学生进行移动通信网络维护和网络优化项目实习。熟练掌握各类移动通信工具的使用；掌握基站上电的基本流程；掌握基站本地开通的过程以及基本的调测步骤；掌握基站联调的过程以及验证方法；掌握基站联调成功后拨打测试的方法、过程、测试报告撰写。</dd>
+      <dt>2．大唐邦彦（上海）信息技术有限公司-工学结合实践中心：</dt>
+      <dd>大唐邦彦（上海）信息技术有限公司是由大唐电信科技产业集团（电信科学技术研究院）所属公司2014年投资的一家高科技公司。大唐邦彦依托集团雄厚的技术基础与人才培养优势，进行移动互联网信息技术、大数据云平台、教育行业信息化、校企合作产教融合开发项目。</dd>
+      <dd>“工学结合实践中心”平台以移动互联网产业发展和人才需求为导向，确保最新技术的迭代更新，确立机制把企业研发项目转化为教学项目。具备进行物联网硬件接口设计、软件编程设计和嵌入式软硬件应用设计开发功能。承担技能鉴定考试培训，能够开展真实、仿真与虚拟相结合的项目实训，形成集职业培训、职业技能鉴定和社会服务为一体的综合实践中心，紧密对接产业需求的人才同时具备移动在线学习和实时互动功能。</dd>
+    </dl>
 </div>
