--- a/app/views/courses/2/_course_effect.html.erb
+++ b/app/views/courses/2/_course_effect.html.erb
@@ -3,11 +3,54 @@
 <!-- <a href="javascript:void(0)" class="btn course-content-effect-nav"><strong>学生评价</strong></a> -->
 <br><br>
 <dl>
-  <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 校外专家评价</p>
   <div class="container-fluid">
-  </div>
-
-  <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 行业企业专家评价</p>
-  <div class="container-fluid">
+    <dt>1．校外专家、行业企业专家、校内督导及学生评价</dt>
+    <dt>1.1校外专家评价</dt>
+    <dd>上海市经济和信息化委员会副主任邵志清教授对《无线网络设备维护》课程的评价</dd>
+    <dd>《无线网络设备维护》课程是通信技术专业的核心课程，上海工商职业技术学院十分重视该课程的建设。他们在与企业六个共同建设专业的指导思想下，进行校企合作共同开发课程，保证了课程和行业、企业的紧密联系，体现了高技能人才培养目标和通信专业职业岗位的要求，同时又注重培养学生的职业技能和职业素养，取得了突出成绩。</dd>
+    <dd>在师资队伍方面，该课程构建了一支老、中、青结合，专、兼职结合，综合素质较高的教学团队。任课教师中“双师”素质教师和专业教师中来自行业企业的兼职教师比例符合课程性质和教学实施的要求。通过聘请行业企业中具有相应高技能水平的专业人才担任本课程的兼职教师，使教学内容和教学过程紧贴企业发展实际要求，快速融入企业的最新信息和企业文化。</dd>
+    <dd>在课程设计理念方面，体现了教学过程与生产过程对接，课程内容与职业标准对接：学习环境与实际环境的对接；教师与工程师的对接；学习项目与实际项目的对接；工作能力与企业用人要求的对接。</dd>
+    <dd>本课程与企业深度合作，共建面向市场的实训基地，营造企业工作环境，使学生亲身体验工程现场对工程师实际技能需求，提前进入工作实战状态。在实现知识技能进阶的同时直接增加工作经验，缩短理论与实践转换适应期，保证学生就业设备维护和网络优化岗位后，不需培训马上投入工作。</dd>
+    <dd>在教学内容选取过程中，以职业素养和职业能力培养为核心，由校企共同开发教学内容，充分体现职业性、实践性、开放性的要求；同时内容兼顾了知识、能力的可移植性，为学生可持续发展奠定良好基础。既体现了职业技能为本的现代职业教育思想，又能兼顾高职学生认知能力，适合于课堂教学，是一种具有高职特色的设计模式。</dd>
+    <dd>在教学方法方面，以项目教学法为基本教学方法，根据项目实施的基本情况，灵活应用多种教学方法，教学过程注重工学结合和理实一体化。实施“信息化环境下向工作岗位校企协同”的教学模式，依托学校“大唐移动通信人才培养基地”集专业教学、社会服务、职业资格培训、鉴定、对外展示、交流的真实氛围，让学生“在工作中学习，学习的内容是工作”。使学生在校期间，基本完成由大学生到企业员工的身份转变，各种能力得到广泛锻炼，真正做到零距离与企业接轨。</dd>
+    <dd>由于善于利用多媒体、网络等现代教育技术和教学环境和教学手段，促进教学质量的不断提高，既重视基础理论知识的传授，又重视学生职业能力和素质的培养，无线网络设备维护课程教学内容和“大唐信息技术工程师”（DTCE）职业技能资格考证紧密结合，合格率达到90%左右，收到了良好的教学效果。</dd>
+    <dd>由于善于利用多媒体、网络等现代教育技术和教学环境和教学手段，促进教学质量的不断提高，既重视基础理论知识的传授，又重视学生职业能力和素质的培养，无线网络设备维护课程教学内容和“大唐信息技术工程师”（DTCE）职业技能资格考证紧密结合，合格率达到90%左右，收到了良好的教学效果。</dd>
+    <dd>上海工商职业技术学院的《无线网络设备维护》课程符合精品课程的申报要求，特此推荐该课程申报2015年度高职高专上海市精品课程。</dd>
+    <dt>1.2行业企业专家评价</dt>
+    <dd>大唐电信科技产业集团副总工程师、享受国务院特殊津贴专家、教授级高工申学军先生对《无线网络设备维护》课程的评价</dd>
+    <dd>上海工商职业技术学院《无线网络设备维护》课程，具有很强的实践性，体现了教学的“应用性、针对性、先进性”原则，是一套有特色，科学性的教学系统及方法。通过本课程的学习，能够培养学生的综合能力，实践能力，和独立工作能力。</dd>
+    <dd>在本课程的设计过程中，《无线网络设备维护》课程组的老师根据岗位技能的需要与我公司企业合作，共同探讨3G、4G移动通信系统的“无线网络设备维护”课程设计，理论联系实际，充分体现了行业专业人才培养的特色。</dd>
+    <dd>根据学院通信技术专业的实际情况，我们注重该课程的学生实践动手能力和应用能力的培养，使学生毕业后很快就能胜任岗位的要求。在讲述3G、4G无线网络设备原理的基础上，内容上力求突出实际操作技能，从而增加学生对无线网络设备的维护能力和对故障的排除能力。上海工商职业技术学院《无线网络设备维护》课程组充分做到了这一要求，并不定期的与企业进行交流，共同探讨和解决企业无线网络设备中出现的问题和解决方法。</dd>
+    <dd>由于工商学院的毕业生在毕业前能获得“DTCE（大唐信息技术工程师认证）”职业资格证书，其中《无线网络设备维护》课程为之打下扎实的基础，这些同学在进入企业岗位后就能直接上手，而无需进行长时间上岗前的培训，既为企业节约了成本，更为企业输送了合格合适的人才。</dd>
+    <dd>我们企业推荐上海工商职业技术学院《无线网络设备维护》课程申报上海市市级精品课程。</dd>
+    <dt>1.3校内教学督导组的评价</dt>
+    <dd>教学督导处处长朱建六对《无线网络设备维护》课程的评价</dd>
+    <dd>《无线网络设备维护》课程是通信技术专业重点核心课程,其教学团队是一支在年龄、职称、双师等方面结构合理的具有较高综合素质的队伍。这个教学团队经过多年的不懈努力,在教学上取得了显著的成绩, 学生参加“大唐信息技术工程师认证（DTCE）”职业资格考试，通过率达90%左右,毕业生就业率在99%以上,学生参加“大唐杯”全国大学生移动通信技术大赛，获得了很好的成绩。</dd>
+    <dd>我院与大唐电信产业集团旗下的大唐移动通信设备有限公司、大唐邦彦（上海）信息技术有限公司进行深度的校企合作。2011-2015年学院投入上海市民办高校政府扶持专项资金888万，大唐公司配套575万，校企共建面向市场的实训基地---大唐移动通信人才培养基地，已成为集教学、培训、职业资格鉴定多功能的实训基地。这也为《无线网络设备维护》课程的实训创造了优越的条件。</dd>
+    <dd>综上所述 《无线网络设备维护》课程申请精品课程条件已经成熟。</dd>
+    <dd>精品课程的定位具有前瞻性,设计理念符合高职高专学生的培养目标,教学内容能遵循学生的认知规律和职业成长需要,教学方法体现了以学生为主体教师为主导的地位。同意该课程申报市级精品课程。</dd>
+    <dt>1.4学生评价</dt>
+    <dd>通信11级---宋子文</dd>
+    <dd>《无线网络设备维护》这门课程是我们上海工商职业技术学院和大唐移动通信技术有限公司校企合作开发的通信专业（移动通信方向）的一门重要的专业课程。学校为我们请来了大唐移动的资深工程师讲课。</dd>
+    <dd>课堂上，老师深入浅出地为我们讲解无线网络的理论知识，更加引人入胜的是老师还在实训室里指导我们每一位同学对大唐移动提供的无线网络现网进行操作，结合课本给我们一一讲解，从而更方便我们理解。另外，老师还结合自己的工作经验为我们举了很多工程实例，加深理解各项操作与理论之间的关系，从而补充我们在实践方面的网络维护经验。</dd>
+    <dd>总之，通过《无线网络设备维护》这门课程的校内学习，我们已经能完成日常的无线网络设备维护，为我们后续的走向实际工作岗位独立操作打下了坚实的基础。</dd>
+    <dt>通信12级---戴超</dt>
+    <dd>《无线网络设备维护》这门课程是我们通信专业必须学习的一门重要专业课程，在企业的实习过程中，我们经常会接到任务需求——通信基站勘站和维护，因此在这个过程中该课程的重要性就体现出来了，其中工作中的很多的知识便是从该课程中学习来的。</dd>
+    <dd>老师在上课时使用真实的大唐3G、4G无线网络通信设备对我们进行训练，上课时的案例分析等等避免了我们在工作时少走弯路，因此个人认为这门课程对我们通信专业的同学来说是非常实用的一门专业课程，需要我们去认真的学好它。</dd>
+    <dt>通信12级---叶韵</dt>
+    <dd>《无线网络设备维护》是我们通信技术（移动通信方向）非常重要的专业课程。课堂上老师除了讲授基站、无线网络控制中心等设备原理，还大量要求我们动手实际测试设备参数，查询设备工作状态，对设备进行开通，升级，割接等操作，大大增强了我们的理论和实践结合的能力，缩短了我们从毕业到实际独立顶岗工作的时间。</dd>
+    <dt>2社会认可度</dt>
+    <dt>2.1职业资格考证及就业情况：</dt>
+    <dd>通信技术专业创办于2000年，2011年与大唐电信科技产业集团进行深度校企合作。近两年来，《无线电装接工（中级）》考证通过率为100%，DTCE（大唐信息技术工程师认证）通过率为90%以上，毕业生就业率均为99%左右。</dd>
+    <dt>2.2社会对毕业生评价</dt>
+    <dd>我们通过对计算机专业近两年毕业生进行跟踪调查，企业评价我校通信技术专业人才综合素质汇总如下：</dd>
+    <dd>主要肯定：学生思想上要求进步，工作认真，基础知识扎实，爱岗敬业，能较好地完成领导交给的任务；团结同事，有很好的团队合作精神；有较强的业务能力、钻研肯干，职业技术能力过硬，有较强的动手能力； 诚实守信，任劳任怨，虚心上进。 </dd>
+    <dd>毕业生跟踪调查得到了大部分用人单位的支持，从调查结果来看，社会对我校通信技术专业毕业生总体质量是满意的，这与学校平时加强职业教育，加强专业基础知识及职业技能的训练是分不开的。</dd>
+    <dt>2.3竞赛情况（近2年）</dt>
+    <dd>2014年第一届“大唐杯”全国大学生移动通信技术大赛（上海赛区选拔赛），2位同学荣获三等奖。</dd>
+    <dd>2015年第二届“大唐杯”全国大学生移动通信技术大赛（华东赛区选拔赛），4位同学荣获二等奖，2位同学荣获三等奖。</dd>
+    <dd>2015年上海市“星光计划”第六届职业院校技能大赛“物联网应用”项目，1位同学荣获三等奖。</dd>
+    <dd>2015年“全国职业院校技能大赛”移动互联网应用软件开发，荣获团体三等奖。</dd>
+    <dd>2015年第六届蓝桥杯软件和信息技术专业人才大赛上海赛区选拔赛，1位同学荣获一等奖，5位同学荣获二等奖，2位同学荣获三等奖。</dd>
   </div>
 </dl>
