--- a/app/views/discusses/_new_modal.html.erb
+++ b/app/views/discusses/_new_modal.html.erb
@@ -30,7 +30,7 @@
             <%= f.submit "确认发布", class: "btn btn-info" %>
           </div>
           <div class="col-sm-5 text-center">
-            <button class="btn btn-danger">取消发布</button>
+            <button class="btn btn-danger" data-dismiss="modal">取消发布</button>
           </div>
         </div>
       <% end %>
